# client

./: .gitignore  CMakeLists.txt  main.cpp
factory/: CMakeLists.txt
factory/fSockaddr_in/: CMakeLists.txt
factory/fSockaddr_in/fSockaddr_in_localhost/: CMakeLists.txt  fSockaddr_in_localhost.cpp  fSockaddr_in_localhost.h
factory/fSocketClientLinux/: CMakeLists.txt  fSocketClientLinux.cpp  fSocketClientLinux.h
interface/iFactory/iFSockaddr_in/: iFSockaddr_in.h
interface/iFactory/iFSocketClient/: iFSocketClient.h
interface/iSocket/iSocketClient/: iSocketClient.h
socket/: CMakeLists.txt
socket/socketClientLinux/: socketClientLinux.cpp  socketClientLinux.h
